--- a/data-collection.ipynb
+++ b/data-collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,81 +69,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "08-11-2021 done\n",
-      "09-11-2021 done\n",
-      "10-11-2021 done\n",
-      "11-11-2021 done\n",
-      "12-11-2021 done\n",
-      "13-11-2021 done\n",
-      "14-11-2021 done\n",
-      "15-11-2021 done\n",
-      "16-11-2021 done\n",
-      "17-11-2021 done\n",
-      "18-11-2021 done\n",
-      "19-11-2021 done\n",
-      "20-11-2021 done\n",
-      "21-11-2021 done\n",
-      "22-11-2021 done\n",
-      "23-11-2021 done\n",
-      "24-11-2021 done\n",
-      "25-11-2021 done\n",
-      "26-11-2021 done\n",
-      "27-11-2021 done\n",
-      "28-11-2021 done\n",
-      "29-11-2021 done\n",
-      "30-11-2021 done\n",
-      "01-12-2021 done\n",
-      "02-12-2021 done\n",
-      "03-12-2021 done\n",
-      "04-12-2021 done\n",
-      "05-12-2021 done\n",
-      "06-12-2021 done\n",
-      "07-12-2021 done\n",
-      "08-12-2021 done\n",
-      "09-12-2021 done\n",
-      "10-12-2021 done\n",
-      "11-12-2021 done\n",
-      "12-12-2021 done\n",
-      "13-12-2021 done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "price = np.zeros((len(date_list),len(coin_list)))\n",
     "mktcap = np.zeros((len(date_list),len(coin_list)))\n",
     "volume = np.zeros((len(date_list),len(coin_list)))\n",
-    "reddita = np.zeros((len(date_list),len(coin_list)))\n",
-    "redditc = np.zeros((len(date_list),len(coin_list)))\n",
-    "redditp = np.zeros((len(date_list),len(coin_list)))\n",
     "for t in range(390,len(date_list)):\n",
     "    for i in range(len(coin_list)):\n",
     "        hist = cg.get_coin_history_by_id(date=date_list[t],id=coin_list[i],localization='false')\n",
     "        try:\n",
     "            price[t,i] = hist['market_data']['current_price']['usd']\n",
     "            mktcap[t,i] = hist['market_data']['market_cap']['usd']\n",
-    "            volume[t,i] = hist['market_data']['total_volume']['usd']\n",
-    "            if hist['community_data']['reddit_accounts_active_48h'] == None:\n",
-    "                reddita[t,i] = 0\n",
-    "            else:\n",
-    "                reddita[t,i] = hist['community_data']['reddit_accounts_active_48h']\n",
-    "            redditc[t,i] = hist['community_data']['reddit_average_comments_48h']\n",
-    "            redditp[t,i] = hist['community_data']['reddit_average_posts_48h']          \n",
+    "            volume[t,i] = hist['market_data']['total_volume']['usd']       \n",
     "        except KeyError:\n",
     "            price[t,i] = price[t-1,i]\n",
     "            mktcap[t,i] = mktcap[t-1,i]\n",
     "            volume[t,i] = volume[t-1,i]\n",
-    "            reddita[t,i] = reddita[t-1,i]\n",
-    "            redditp[t,i] = redditp[t-1,i]\n",
-    "            redditc[t,i] = redditc[t-1,i]\n",
     "            print(date_list[t],coin_list[i],\"EXCEPTION\")\n",
     "        time.sleep(1.21)\n",
     "    print(date_list[t],\"done\")"
@@ -151,23 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "price_df = pd.DataFrame(price,index=date_list,columns=coin_list)\n",
     "mktcap_df = pd.DataFrame(mktcap,index=date_list,columns=coin_list)\n",
     "volume_df = pd.DataFrame(volume,index=date_list,columns=coin_list)\n",
-    "reddita_df = pd.DataFrame(reddita,index=date_list,columns=coin_list)\n",
-    "redditc_df = pd.DataFrame(redditc,index=date_list,columns=coin_list)\n",
-    "redditp_df = pd.DataFrame(redditp,index=date_list,columns=coin_list)\n",
     "\n",
     "price_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\price-extra.csv\")\n",
     "mktcap_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\mktcap-extra.csv\")\n",
-    "volume_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\volume-extra.csv\")\n",
-    "reddita_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\reddita-extra.csv\")\n",
-    "redditc_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\redditc-extra.csv\")\n",
-    "redditp_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\redditp-extra.csv\")"
+    "volume_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\volume-extra.csv\")"
    ]
   },
   {
@@ -215,85 +154,6 @@
    "source": [
     "rfrate_df = pd.DataFrame(rfrate,index=date_list,columns=['tbill_1m'])\n",
     "rfrate_df.to_csv(r\"C:\\Users\\zhubr\\Desktop\\ECON 419\\econ419-paper\\rfrate.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Remove stuff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "price_df = pd.read_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper\\price.csv\")\n",
-    "mktcap_df = pd.read_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper\\mktcap.csv\")\n",
-    "reddita_df = pd.read_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper\\reddita.csv\")\n",
-    "redditc_df = pd.read_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper\\redditc.csv\")\n",
-    "redditp_df = pd.read_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper\\redditp.csv\")\n",
-    "\n",
-    "price_df = price_df.set_index([date_list])\n",
-    "mktcap_df = mktcap_df.set_index([date_list])\n",
-    "reddita_df = reddita_df.set_index([date_list])\n",
-    "redditc_df = redditc_df.set_index([date_list])\n",
-    "redditp_df = redditp_df.set_index([date_list])\n",
-    "\n",
-    "remove_list = ['Unnamed: 0',\n",
-    "               'terra-luna','wrapped-bitcoin','okb','uniswap','ftx-token','the-sandbox',\n",
-    "               'blockstack','arweave','kusama','bitcoin-cash-sv','kadena','chiliz',\n",
-    "               'curve-dao-token','compound-governance-token','sushi','gatechain-token','nxm','ankr',\n",
-    "               'secret','uma','wazirx','perpetual-protocol','flex-coin','kava']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "price_df = price_df.drop(columns=remove_list)\n",
-    "mktcap_df = mktcap_df.drop(columns=remove_list)\n",
-    "reddita_df = reddita_df.drop(columns=remove_list)\n",
-    "redditc_df = redditc_df.drop(columns=remove_list)\n",
-    "redditp_df = redditp_df.drop(columns=remove_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "price_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\price.csv\")\n",
-    "mktcap_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\mktcap.csv\")\n",
-    "reddita_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\reddita.csv\")\n",
-    "redditc_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\redditc.csv\")\n",
-    "redditp_df.to_csv(r\"C:\\Users\\zhubr\\OneDrive\\Desktop\\ECON 419\\econ419-paper-data\\redditp.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Backup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test = cg.get_coin_history_by_id(date='14-10-2020',id='holotoken',localization='false')\n",
-    "# test\n",
-    "\n",
-    "# test['market_data']['current_price']['usd']\n",
-    "# test['market_data']['market_cap']['usd']\n",
-    "# test['community_data']['reddit_average_posts_48h']"
    ]
   }
  ],
